--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,5 +1,5 @@
-html, body {
-  font-family: Helvetica, Arial, sans-serif;
+@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);html, body {
+  font-family: "Raleway", sans-serif;
   background: #2A3F54;
   font-weight: 100;
   font-size: 18x;
