--- a/resources/assets/sass/common.scss
+++ b/resources/assets/sass/common.scss
@@ -1,5 +1,10 @@
+@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
+
+// Font Variables
+$raleway: 'Raleway', sans-serif;
+
 html, body {
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: $raleway;
   background: #2A3F54;
   font-weight: 100;
   font-size: 18x;
