--- a/resources/assets/sass/home.scss
+++ b/resources/assets/sass/home.scss
@@ -1,10 +1,13 @@
 // Font Raleway
-@import 'raleway';
+@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
+
+// Font Variables
+$raleway: 'Raleway', sans-serif;
 
 // main styles
 html, body {
   background: #2A3F54;
-  font-family: Raleway, Helvetica, Arial, sans-serif !important;
+  font-family: $raleway;
   font-weight: 100;
   height: 100vh;
   margin: 0;
